添加注释和优化